--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To Paradise</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Header Logo</h1>
+            <h1 class="header-logo">Header Logo</h1>
             <ul>
-                <li><a>Header Link One</a></li>
-                <li><a>Header Link Two</a></li>
-                <li><a>Header Link Three</a></li>
+                <li><a href="#">Header Link One</a></li>
+                <li><a href="#">Header Link Two</a></li>
+                <li><a href="#">Header Link Three</a></li>
             </ul>
         </nav>
-        <section>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="sign-up">Sign Up</button>
-        </section>
+        <div class="header-container">
+            <div class="header-content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="sign-up"><a href="#">Sign Up</a></button>
+            </div>
+        
         <img src="./images/sunset-7790626_1920.jpg">
+        </div>
     </header>
     <div class="illustration-container">
         <h1>Some random information</h1>
