Add images to illustration box and apply styles

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <h1>Some random information</h1>
         <div class="card-container">
             <div class="info-card">
-                <img src="">
+                <img src="./images/pixel-7290384_640.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-                <img src="">
+                <img src="./images/pixel-art-7280241_640.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-                <img src="">
+                <img src="./images/pixel-art-7280249_640.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-                <img src="">
+                <img src="./images/pixel-art-7280889_640.png">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
