--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
         <p class="quote-credits">-Thor, God of Thunder</p>
     </div>
     <div class="recruit-section">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking the button right over there!</p>
-        <button class="sign-up">Sign up</button>
+        <div class="action-area">
+            <div class="left-side">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking the button right over there!</p>
+            </div>
+            <div class="right-side">
+                <button class="sign-up"><a href="#">Sign up</a></button>
+            </div>
+        </div>
     </div>
     <footer>Landing Page By: Shawn Yearwood</footer>
 </body>
